--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
           <ul class="header__menu">
             <li class="header__menu-item"><a class="header__menu-link" href="index.html">Home</a></li>
             <li class="header__menu-item"><a class="header__menu-link" href="#couple">Happy couple</a></li>
-            <li class="header__menu-item"><a class="header__menu-link" href="#story">Love story</a></li>
-            <li class="header__menu-item"><a class="header__menu-link" href="#photos">Our photos</a></li>
             <li class="header__menu-item"><a class="header__menu-link" href="#venues">Venues</a></li>
           </ul>
           <div class="header__user-actions">
@@ -84,16 +82,16 @@
   	<!-- Section: Couple -->
     <section class="couple" id="couple">
       <div class="container">
-        <h2 class="s-title text--colored">Happy Couple</h2>
+        <h2 class="s-title text--colored">The Plan</h2>
         <div class="couple__groom">
           <div class="couple__image couple__image-groom--left border--colored"></div>
           <div class="couple__text couple__text--right">
             <div class="couple__text-head text--colored">
-              <h3 class="couple__title text--colored">Jeremy</h3><span class="couple__subtitle text--colored">the Groom</span>
+              <h3 class="couple__title text--colored">Midday @ Guildhall in Faversham</h3><span class="couple__subtitle text--colored">the Groom</span>
             </div>
             <div class="couple__text-body">
-              <p class="couple__descr">I bumped into Diana again 7 years later in a club, she had literally just returned from a holiday and was out celebrating her birthday. I was back from sea for 4 days before I left again for a few months. The probability that this would happen is crazy and to top it all off, she remembered my name. </p>
-              <p class="couple__descr">I got this amazing feeling as soon as I saw her and it lives with me every day and I promise that the bunny outfit had nothing to do with it. Needless to say it turned into a very expensive night out</p>
+              <p class="couple__descr">Car park instructions and stuff</p>
+              <p class="couple__descr"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d19942.391198588044!2d0.882089!3d51.3332186!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded31db7623e25%3A0x2222f3544a4df06e!2sGuildhall!5e0!3m2!1sen!2suk!4v1683960678051!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
             </div>
           </div>
         </div>
