--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="couple__image couple__image-groom--left border--colored"></div>
           <div class="couple__text couple__text--right">
             <div class="couple__text-head text--colored">
-              <h3 class="couple__title text--colored">Midday @ Guildhall in Faversham</h3><span class="couple__subtitle text--colored">the Groom</span>
+              <h3 class="couple__title text--colored">Midday @ Guildhall in Faversham</h3><span class="couple__subtitle text--colored">For the service</span>
             </div>
             <div class="couple__text-body">
               <p class="couple__descr">Car park instructions and stuff</p>
@@ -99,11 +99,11 @@
           <div class="couple__image couple__image-bride--right border--colored"></div>
           <div class="couple__text couple__text--left">
             <div class="couple__text-head text--colored">
-              <h3 class="couple__title text--colored">Diana</h3><span class="couple__subtitle text--colored">the Bride</span>
+              <h3 class="couple__title text--colored">1pm At The Three Mariners in Oare</h3><span class="couple__subtitle text--colored">The party</span>
             </div>
             <div class="couple__text-body">
-              <p class="couple__descr">Jeremy and I have absolutely no hobbies or interests in common at all!  I fact, we're pretty much complete opposites! But who needs stuff in common? It's over-rated!  </p>
-              <p class="couple__descr">More importantly, we have the same life goals, the same priorities, the same attitudes to people and money and work and the same sense of what's right and wrong in life.  We say that we're soul mates and over the last 7 years I feel like we've become adults together and somehow shaped each other into becoming better people.</p>
+              <p class="couple__descr">Instructions around parking and walking from the guildhall  </p>
+              <p class="couple__descr"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2492.980990576675!2d0.8762558763274655!3d51.329869471773485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded33ba64eb523%3A0x18e2f5eace56b754!2sThree%20Mariners!5e0!3m2!1sen!2suk!4v1683961058527!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
             </div>
           </div>
         </div>
