--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </nav>
         <div class="header__content">
           <div class="header__title-wrapper">
-            <h1 class="header__title">Jeremy &amp; Diana</h1><span class="header__subtitle">Are getting married <br> september 25, 2020</span>
+            <h1 class="header__title">Dave &amp; Nicky</h1><span class="header__subtitle">Are getting married <br> May 27th, 2023</span>
           </div>
         </div>
         <div class="header__countdown">
@@ -79,6 +79,51 @@
     </header>
   	<!-- END Header -->
   	
+    <!-- Section: Venues -->
+    <section class="venues" id="venues">
+      <div class="container">
+        <h2 class="s-title text--colored"> Venues</h2>
+        <div class="container-sm">
+          <div class="venues__ceremony">
+            <div class="ceremony__card venues__card border--colored">
+              <div class="venues__card-head text--colored"> 
+                <h3 class="venues__card-title text--colored"> Wedding Ceremony</h3>
+              </div>
+              <div class="venues__card-info">
+                <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
+                  <time class="venues__card-data">12:00pm, May 27th, 2023</time>
+                </div>
+                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">The Guildhall, Faversham, Kent, UK. ME13 7AG</span></div>
+              </div><a class="venues__card-link" href="#">See on map</a>
+            </div>
+            <div class="address__map-container--left address__map">
+              <div class="address__map--ceremony map" id="address__map--ceremony"></div>
+            </div>
+          </div>
+        </div>
+        <div class="container-sm">
+          <div class="venues__reception">
+            <div class="reception__card venues__card border--colored">
+              <div class="venues__card-head text--colored">
+                <h3 class="venues__card-title text--colored">Wedding Ceremony</h3>
+              </div>
+              <div class="venues__card-info">
+                <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
+                  <time class="venues__card-data">11:30, September 19th, 2020</time>
+                </div>
+                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
+              </div><a class="venues__card-link" href="#">See on map</a>
+            </div>
+            <div class="address__map-container--right address__map">
+              <div class="address__map--reception map" id="address__map--reception"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Venues -->
+    
+    
   	<!-- Section: Couple -->
     <section class="couple" id="couple">
       <div class="container">
@@ -169,97 +214,15 @@
     </section>
   	<!-- END Section: Photos -->
   	
-  	<!-- Section: Venues -->
-    <section class="venues" id="venues">
-      <div class="container">
-        <h2 class="s-title text--colored"> Venues</h2>
-        <div class="container-sm">
-          <div class="venues__ceremony">
-            <div class="ceremony__card venues__card border--colored">
-              <div class="venues__card-head text--colored"> 
-                <h3 class="venues__card-title text--colored"> Wedding Ceremony</h3>
-              </div>
-              <div class="venues__card-info">
-                <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
-                  <time class="venues__card-data">11:30, September 19th, 2020</time>
-                </div>
-                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
-              </div><a class="venues__card-link" href="#">See on map</a>
-            </div>
-            <div class="address__map-container--left address__map">
-              <div class="address__map--ceremony map" id="address__map--ceremony"></div>
-            </div>
-          </div>
-        </div>
-        <div class="container-sm">
-          <div class="venues__reception">
-            <div class="reception__card venues__card border--colored">
-              <div class="venues__card-head text--colored">
-                <h3 class="venues__card-title text--colored">Wedding Ceremony</h3>
-              </div>
-              <div class="venues__card-info">
-                <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
-                  <time class="venues__card-data">11:30, September 19th, 2020</time>
-                </div>
-                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
-              </div><a class="venues__card-link" href="#">See on map</a>
-            </div>
-            <div class="address__map-container--right address__map">
-              <div class="address__map--reception map" id="address__map--reception"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  	<!-- END Section: Venues -->
   	
-  	<!-- Section: Rvsp -->
-    <section class="rvsp" id="rvsp">
-      <div class="container">
-        <div class="rvsp__forrm-wrap">
-          <form class="rvsp__form" action="" method="POST">
-            <h2 class="rvsp__title text--colored">RVSP</h2><span class="rvsp__subtitle text--colored">Please reserve before September 19th, 2020</span>
-            <div class="rvsp__inputs-group">
-              <div class="form-group iputs__group">
-                <label class="bmd-label-floating" for="name">Your Name</label>
-                <input class="form-control" type="text" id="name"/>
-              </div>
-              <div class="form-group iputs__group">
-                <label class="bmd-label-floating" for="mail">Your E-mail</label>
-                <input class="form-control" type="email" id="mail"/>
-              </div>
-            </div>
-            <div class="rvsp__inputs-group">
-              <div class="form-group iputs__group">
-                <label class="bmd-label-floating" for="number">Number of Guests</label>
-                <input class="form-control" type="number" id="number"/>
-              </div>
-              <div class="form-group iputs__group form-group--select">
-                <div class="form__select select--clicked"><span class="select__label">I will Attend</span><span class="selected__item"></span>
-                  <div class="select-dropdown"><span class="dropdown__select">Yes</span><span class="dropdown__select">Not</span><span class="dropdown__select">Not Sure</span></div>
-                </div>
-              </div>
-            </div>
-            <div class="rvsp__inputs-group rvsp__group--textarea">
-              <div class="form-group">
-                <label class="bmd-label-floating" for="textarea">Your Comment</label>
-                <textarea class="rvsp__textarea form-control" id="textarea"></textarea>
-              </div>
-            </div>
-            <button class="rvsp__btn btn bg--colored" type="submit">I will attend</button>
-          </form>
-        </div>
-      </div>
-    </section>
-  	<!-- END Section: Rvsp -->
   	
   	<!-- Section: Support -->
     <section class="support">
       <div class="container">
         <div class="support__title-wrap">
-          <h2 class="support__title">Want to support us?</h2>
+          <h2 class="support__title">The Wedding Present Question</h2>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">You can make a donation here</span>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">It's corny but your presence is our presents</span>
           <button class="btn support__btn bg--colored" type="button">Donate</button>
         </div>
       </div>
