--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                   <time class="venues__card-data">12:00pm, May 27th, 2023</time>
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">The Guildhall, Faversham, Kent, UK. ME13 7AG</span></div>
-              </div><a class="venues__card-link" href="#">See on map</a>
+              </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
             <div class="address__map-container--left address__map">
-              <div class="address__map--ceremony map" id="address__map--ceremony"></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9974.972894223785!2d0.8911502!3d51.3158483!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded31db7623e25%3A0x2222f3544a4df06e!2sGuildhall!5e0!3m2!1sen!2suk!4v1683961717853!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
                   <time class="venues__card-data">11:30, September 19th, 2020</time>
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
-              </div><a class="venues__card-link" href="#">See on map</a>
+              </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
             <div class="address__map-container--right address__map">
               <div class="address__map--reception map" id="address__map--reception"></div>
