--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
             <div class="address__map-container--left address__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9974.972894223785!2d0.8911502!3d51.3158483!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ded31db7623e25%3A0x2222f3544a4df06e!2sGuildhall!5e0!3m2!1sen!2suk!4v1683961717853!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               <img src="https://media-cdn.tripadvisor.com/media/photo-s/1d/0e/1a/d3/guildhall.jpg"/>
             </div>
           </div>
         </div>
