--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                   <time class="venues__card-data">12:00pm, May 27th, 2023</time>
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">The Guildhall, Faversham, Kent, UK. ME13 7AG</span></div>
+                <div class="venues__card-block"><span class="venues__card-label mrg">Details</span>
+                  <time class="venues__card-data">Information about parking and being early</time>
+                </div>              
               </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
             <div class="address__map-container--left address__map">
