--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     <header class="header">
       <div class="container">
         <nav class="header__nav">
-          <div class="logo"><img class="img-responsive logo-image" src="img/header/logo.png" alt="Logo"/></div>
           <ul class="header__menu">
             <li class="header__menu-item"><a class="header__menu-link" href="index.html">Home</a></li>
             <li class="header__menu-item"><a class="header__menu-link" href="#couple">Happy couple</a></li>
@@ -109,18 +108,18 @@
           <div class="venues__reception">
             <div class="reception__card venues__card border--colored">
               <div class="venues__card-head text--colored">
-                <h3 class="venues__card-title text--colored">Wedding Ceremony</h3>
+                <h3 class="venues__card-title text--colored">The After Party</h3>
               </div>
               <div class="venues__card-info">
                 <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
-                  <time class="venues__card-data">11:30, September 19th, 2020</time>
+                  <time class="venues__card-data">13:00, May 27th, 2023</time>
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
               </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
-            <div class="address__map-container--right address__map">
-              <div class="address__map--reception map" id="address__map--reception"></div>
-            </div>
+            <div class="address__map-container--left address__map">
+              <img src="/img/mariners.jpg"/>
+           </div>
           </div>
         </div>
       </div>
