--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <div class="venues__card-block"><span class="venues__card-label mrg">When</span>
                   <time class="venues__card-data">13:00, May 27th, 2023</time>
                 </div>
-                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">Saint Thomas Church Fifth Avenue 1 W 53rd St, New York, NY 10019</span></div>
-              </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
+                <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">The Three Mariners, 2 Church Rd, Oare, Faversham ME13 0QA</span></div>
+              </div><a class="venues__card-link" href="https://goo.gl/maps/K63uJLvkdb9WNLaR9">See on map</a>
             </div>
             <div class="address__map-container--right address__map">
               <img src="/img/mariners.jpg"/>
