--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     
   	<!-- Footer -->
     <footer class="footer">
-      <div class="footer__content"><span class="footer__name jeremy text--colored">Jeremy</span>
-        <div class="footer__image"><img src="http://placehold.it/192x112" alt="Photo"/></div><span class="footer__name diana text--colored">Diana</span>
+      <div class="footer__content"><span class="footer__name jeremy text--colored">Dave</span>
+        <div class="footer__image"><img src="/img/us2.jpg" alt="Photo"/></div><span class="footer__name diana text--colored">Nicky</span>
       </div>
     </footer>
   	<!-- END Footer -->
