--- a/index.html
+++ b/index.html
@@ -130,10 +130,24 @@
     <section class="support">
       <div class="container">
         <div class="support__title-wrap">
-          <h3 class="support__title">The Wedding Present Question</h3>
+          <h3 class="support__title">What to wear?</h3>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">It's corny but your presence is our presents</span>
-          <button class="btn support__btn bg--colored" type="button">Donate</button>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">This is a seriously low key event so come wearing what makes you feel fabulous. We are having an adult bouncy castle so if you want to bounce make sure you have some appropriate clothing</span>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Support -->
+
+    <!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__title-wrap">
+          <h3 class="support__title">Wedding Present</h3>
+        </div>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">We seriously only want your presence as our present however corny that sounds. This is not a traditional wedding but some folk have voiced that would really still like to gift us something</span>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant</span></div>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson"></a>Donate to a honeymoon fund </a></span></div>
         </div>
       </div>
     </section>
@@ -142,14 +156,6 @@
   	<!-- To top botton -->
     <div class="to-top bg--colored"></div>
   	<!-- END To top botton -->
-    
-  	<!-- Footer -->
-    <footer class="footer">
-      <div class="footer__content"><span class="footer__name jeremy text--colored">Dave</span>
-        <div class="footer__image"><img src="/img/us2.jpg" alt="Photo"/></div><span class="footer__name diana text--colored">Nicky</span>
-      </div>
-    </footer>
-  	<!-- END Footer -->
   	<!-- All JavaScript Libraries -->
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
     <script src="js/libs.min.js"></script>
