--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
     <section class="support">
       <div class="container">
         <div class="support__title-wrap">
-          <h3 class="support__title">Wedding Present</h3>
+          <h3 class="support__title">Gift</h3>
         </div>
         <div class="support__btn-wrap"><span class="support__btn-sescr">We seriously only want your presence as our present however corny that sounds. This is not a traditional wedding but some folk have voiced that would really still like to gift us something</span>
           <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
           <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant</span></div>
-          <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson"></a>Donate to a honeymoon fund </a></span></div>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson">Donate to a honeymoon fund </a></span></div>
         </div>
       </div>
     </section>
