--- a/index.html
+++ b/index.html
@@ -130,13 +130,40 @@
     <section class="support">
       <div class="container">
         <div class="support__title-wrap">
+          <h3 class="support__title">Food</h3>
+        </div>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we are putting a selection of seafood. Pizza for the kids. Also brazilian BBQ with a selection of seasonal salads</span>
+        </div>
+        <div class="support__title-wrap">
+          <img src="img/menu.jpg"/>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Support -->
+
+    <!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__btn-wrap"><span class="support__btn-sescr">This is a seriously low key event so come wearing what makes you feel fabulous. We are having an adult bouncy castle so if you want to bounce make sure you have some appropriate clothing</span>
+        </div>
+        <div class="support__title-wrap">
+          <h3 class="support__title">Where to stay?</h3>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Support -->
+
+    <!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__title-wrap">
           <h3 class="support__title">What to wear?</h3>
         </div>
         <div class="support__btn-wrap"><span class="support__btn-sescr">This is a seriously low key event so come wearing what makes you feel fabulous. We are having an adult bouncy castle so if you want to bounce make sure you have some appropriate clothing</span>
         </div>
       </div>
     </section>
-  	<!-- END Section: Support -->
+    <!-- END Section: Support -->
 
     <!-- Section: Support -->
     <section class="support">
