--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we are putting a selection of seafood. Pizza for the kids. Also brazilian BBQ with a selection of seasonal salads</span>
         </div>
         <div class="support__title-wrap">
-          <img src="img/menu.jpg"/>
+          <span class="support__btn-sescr"><a href="/img/menu.jpg">Menu &nbsp;<img src="img/menu_thumb.jpg"/></a></span>
         </div>
       </div>
     </section>
