--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
           <span class="support__btn-sescr">There are rail works on the normal line from London with rail replacements which is a pain. However you can still get here it just is slower. There are two alternatives:</span>
           <span class="support__btn-sescr">
             <ul>
-              <li>1. You stay the whole weekend or at least one of the nights - A lot of the accomodation is booked up but there is still space in the <a href="https://www.premierinn.com/gb/en/hotels/england/kent/faversham/faversham.html"> premier inn</a></li>
-              <li>2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
+              <li style="padding: 10 10 10 10;">1. You stay the whole weekend or at least one of the nights - A lot of the accomodation is booked up but there is still space in the <a href="https://www.premierinn.com/gb/en/hotels/england/kent/faversham/faversham.html"> premier inn</a></li>
+              <li style="padding: 10 10 10 10">2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
             </ul>
           </span>
         </div>
