--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
             </ul>
           </span>
           <span class="support__btn-sescr">If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into faversham through the late afternoon and early evening.</span>
-          <div class="support__btn-wrap">
-          </div>
+        </div>
+        <div class="support__title-wrap">
+          <h3 class="support__title">Travel Arrangements</h3>
         </div>
       </div>
     </section>
