--- a/index.html
+++ b/index.html
@@ -31,13 +31,47 @@
     <![endif]-->
   </head>
   <body>
+  
+  	<!-- Menu mobile -->
+    <nav class="mobile-menu bg--colored">
+      <button class="mobile-menu__close"></button>
+      <ul class="navigation__list mobile-navigation__list">
+        <li class="navigation__item mobile-navigation__item"><a class="mobile-navigation__link" href="#">Home</a></li>
+        <li class="navigation__item mobile-navigation__item"><a class="mobile-navigation__link" href="#couple">Happy couple</a></li>
+        <li class="navigation__item mobile-navigation__item"><a class="mobile-navigation__link" href="#story">Love story</a></li>
+        <li class="navigation__item mobile-navigation__item"><a class="mobile-navigation__link" href="#photos">Our photos</a></li>
+        <li class="navigation__item mobile-navigation__item"><a class="mobile-navigation__link" href="#venues">Venues</a></li>
+      </ul>
+    </nav>
+  	<!-- END Menu mobile -->
   	
   	<!-- Header -->
     <header class="header">
       <div class="container">
+        <nav class="header__nav">
+          <ul class="header__menu">
+            <li class="header__menu-item"><a class="header__menu-link" href="index.html">Home</a></li>
+            <li class="header__menu-item"><a class="header__menu-link" href="#couple">Happy couple</a></li>
+            <li class="header__menu-item"><a class="header__menu-link" href="#venues">Venues</a></li>
+          </ul>
+          <div class="header__user-actions">
+            <div class="user-action user-action--hidden"><a class="mobile-menu-btn" href="#">Menu</a></div>
+            <div class="user-action"><a class="rvsp-btn" href="#rvsp">Rvsp</a></div>
+          </div>
+        </nav>
         <div class="header__content">
           <div class="header__title-wrapper">
             <h1 class="header__title">Dave &amp; Nicky</h1><span class="header__subtitle">Are getting married <br> May 27th, 2023</span>
+          </div>
+        </div>
+        <div class="header__countdown">
+          <p class="countdown__title text--colored">Countdown <strong>to</strong> Wedding Ceremony</p>
+          <div class="countdown__block countdown">
+            <div class="countdown__element countdown__month border--colored"> <span class="count month text--colored">00</span><span class="label month_ref text--colored">month</span></div>
+            <div class="countdown__element countdown__days border--colored"> <span class="count days text--colored">00</span><span class="label days_ref text--colored">days</span></div>
+            <div class="countdown__element countdown__hours border--colored"> <span class="count hours text--colored">00</span><span class="label hours_ref text--colored">hours</span></div>
+            <div class="countdown__element countdown__minutes border--colored"> <span class="count minutes text--colored">00</span><span class="label minutes_ref text--colored">minutes</span></div>
+            <div class="countdown__element countdown__seconds border--colored"> <span class="count seconds text--colored">00</span><span class="label seconds_ref text--colored">seconds </span></div>
           </div>
         </div>
       </div>
@@ -92,7 +126,54 @@
     </section>
   	<!-- END Section: Venues -->
 
-  	
+  	<!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__title-wrap">
+          <h3 class="support__title">Food</h3>
+        </div>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we are putting a selection of seafood. Pizza for the kids. Also brazilian BBQ with a selection of seasonal salads</span>
+        </div>
+        <div class="support__title-wrap">
+          <span class="support__btn-sescr"><a href="/img/menu.jpg">Menu &nbsp;<img src="img/menu_thumb.jpg"/></a></span>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Support -->
+
+    <!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__btn-wrap">
+          <span class="support__btn-sescr">There are rail works on the normal line from London with rail replacements which is a pain. However you can still get here it just is slower. There are two alternatives:</span>
+          <span class="support__btn-sescr">
+            <ul class="color_schemes">
+              <li>1. You stay the whole weekend or at least one of the nights - A lot of the accomodation is booked up but there is still space in the <a href="https://www.premierinn.com/gb/en/hotels/england/kent/faversham/faversham.html"> premier inn</a></li>
+              <li>2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
+            </ul>
+          </span>
+        </div>
+        <div class="support__btn-wrap">
+          If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into faversham
+        </div>
+        <div class="support__title-wrap">
+          <h3 class="support__title">Travel Arrangements</h3>
+        </div>
+      </div>
+    </section>
+  	<!-- END Section: Support -->
+
+    <!-- Section: Support -->
+    <section class="support">
+      <div class="container">
+        <div class="support__title-wrap">
+          <h3 class="support__title">What to wear?</h3>
+        </div>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">This is a seriously low key event so come wearing what makes you feel fabulous. We are having an adult bouncy castle so if you want to bounce make sure you have some appropriate clothing</span>
+        </div>
+      </div>
+    </section>
+    <!-- END Section: Support -->
 
     <!-- Section: Support -->
     <section class="support">
