--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
-  <head>
+  <head> 
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Weeding</title>
+    <title>Wedding</title>
     <meta name="keywords" content="keywords"/>
     <meta name="description" content="description"/>
     
