--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
           <h3 class="support__title">Food</h3>
         </div>
         <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we are putting a selection of seafood. Pizza for the kids. Also brazilian BBQ with a selection of seasonal salads</span>
-        </div>
-        <div class="support__title-wrap">
-          <span class="support__btn-sescr"><a href="/img/menu.jpg">Menu &nbsp;<img src="img/menu_thumb.jpg"/></a></span>
+        <span class="support__btn-sescr"><a href="/img/menu.jpg">Menu &nbsp;<img src="img/menu_thumb.jpg"/></a></span>
         </div>
       </div>
     </section>
@@ -152,9 +150,7 @@
               <li>2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
             </ul>
           </span>
-        </div>
-        <div class="support__btn-wrap">
-          If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into
+          <span class="support__btn-sescr">If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into</span>
         </div>
         <div class="support__title-wrap">
           <h3 class="support__title">Travel Arrangements</h3>
