Updated some of the text

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <li>2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
             </ul>
           </span>
-          <span class="support__btn-sescr">If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into</span>
+          <span class="support__btn-sescr">If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into town to where you are staying.</span>
         </div>
       </div>
     </section>
@@ -144,9 +144,9 @@
         <div class="support__title-wrap">
           <h2 class="support__title">Gift</h2>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">We seriously only want your presence as our present however corny that sounds. This is not a traditional wedding but some folk have voiced that would really still like to gift us something</span>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">We honestly only want your presence as our present however corny as that sounds. This is not a traditional wedding but some folk have voiced that would really still like to gift us something</span>
           <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
-          <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant</span></div>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant - Indoor/outdoor/perenial/annual/flower/veg .... We love them all</span></div>
           <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson">Donate to a honeymoon fund </a></span></div>
         </div>
       </div>
