--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span>
                   <span class="venue__card-data">The Guildhall, Faversham, Kent, UK. ME13 7AG</span></div>
-                <div class="venues__card-block"><span class="venues__card-label mrg">Details</span>
-                  <span class="venue__card-data">Information about parking and being early</span>
+                <div class="venues__card-block"><span class="venues__card-label">Details</span>
+                  <span class="venue__card-data">Please arrive early as the ceremony kicks off at midday. Ideally arrive at 11:30am. The nearest parking is in faversham central carpark</span>
                 </div>              
               </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
             </div>
@@ -82,6 +82,9 @@
                   <time class="venues__card-data">13:00, May 27th, 2023</time>
                 </div>
                 <div class="venues__card-block"><span class="venues__card-label">Where</span><span class="venue__card-data">The Three Mariners, 2 Church Rd, Oare, Faversham ME13 0QA</span></div>
+                <div class="venues__card-block"><span class="venues__card-label">Details</span>
+                  <span class="venue__card-data">There is plenty of safe parking space at the pub</span>
+                </div>  
               </div><a class="venues__card-link" href="https://goo.gl/maps/K63uJLvkdb9WNLaR9">See on map</a>
             </div>
             <div class="address__map-container--right address__map">
