Updated some of the text

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="support__title-wrap">
           <h2 class="support__title">Gift</h2>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">We honestly only want your presence as our present however corny as that sounds. This is not a traditional wedding but some folk have voiced that would really still like to gift us something</span>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">We honestly only want your presence as our present however corny as that sounds. This is not a traditional wedding but some folk have voiced that they would still really want to gift us something</span>
           <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
           <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant - Indoor/outdoor/perenial/annual/flower/veg .... We love them all</span></div>
           <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson">Donate to a honeymoon fund </a></span></div>
