--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="support__title-wrap">
           <h2 class="support__title">Food</h2>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we are putting a selection of seafood. Pizza for the kids. Also brazilian BBQ with a selection of seasonal salads</span>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we do have a brazilian BBQ with a selection of seasonal salads. We also have pizza for the kids. We will also be putting out some seafood and local oysters.         </span>
         <span class="support__btn-sescr"><a href="/img/menu.jpg">Menu &nbsp;<img src="img/menu_thumb.jpg"/></a></span>
         </div>
       </div>
