Updated the text

--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
           <h2 class="support__title">Travel Arrangements</h2>
         </div>
         <div class="support__btn-wrap">
-          <span class="support__btn-sescr">There are rail works on the normal line from London with rail replacements which is a pain. However you can still get here it just is slower. There are two alternatives:</span>
+          <span class="support__btn-sescr">There are planned rail works on both the line from Victoria and Kings Cross, they have got rail replacement buses running though but it won't be super quick. There are 3 alternatives:</span>
           <span class="support__btn-sescr">
             <ul class="color_schemes">
               <li>1. You stay the whole weekend or at least one of the nights - A lot of the accomodation is booked up but there is still space in the <a href="https://www.premierinn.com/gb/en/hotels/england/kent/faversham/faversham.html"> premier inn</a></li>
               <li>2. You get the fast train to Ashford (35mins from London) and then get a 25min cab over to Faversham. Please be warned that getting a cab back will need to be arranged as the availability of cabs in the town is limited</li>
+              <li>3. Go into Ashford (35mins from London) and catch the bus from Ashford to Faversham which takes around 50mins</li>
             </ul>
           </span>
           <span class="support__btn-sescr">If you are staying in central faversham then it is about a 20-25min walk to the pub where the party is. We are endevouring to get a taxi shuttle service from the venue back into town to where you are staying.</span>
