Updated the text

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section class="support">
       <div class="container">
         <div class="support__title-wrap">
-          <h2 class="support__title">Gift</h2>
+          <h2 class="support__title">Gifts</h2>
         </div>
         <div class="support__btn-wrap"><span class="support__btn-sescr">We honestly only want your presence as our present however corny as that sounds. This is not a traditional wedding but some folk have voiced that they would still really want to gift us something</span>
           <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
