Updated the text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="support__title-wrap">
           <h2 class="support__title">Food</h2>
         </div>
-        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we do have a brazilian BBQ with a selection of seasonal salads. We also have pizza for the kids. We will also be putting out some seafood and local oysters. <br> <a href="/img/menu.jpg"><img src="img/menu_thumb.jpg"/>Read the menu (not including the seafood)</a> </span>
+        <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we do have a brazilian BBQ with a selection of seasonal salads. We also have pizza for the kids. We will also be putting out some seafood and local oysters. Click on the image to read the menu (not including the seafood).       </span>
         <span class="support__btn-sescr"><a href="/img/menu.jpg"><img src="img/menu_thumb.jpg"/></a></span>
         </div>
       </div>
