--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="venues__card-block"><span class="venues__card-label">Details</span>
                   <span class="venue__card-data">Please arrive early as the ceremony kicks off at midday. Ideally arrive at 11:30am. The nearest parking is in faversham central carpark</span>
                 </div>              
-              </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9">See on map</a>
+              </div><a class="venues__card-link" href="https://goo.gl/maps/jqgENWp2iGXiZzGd9" target="_blank">See on map</a>
             </div>
             <div class="address__map-container--left address__map">
                <img src="https://media-cdn.tripadvisor.com/media/photo-s/1d/0e/1a/d3/guildhall.jpg"/>
@@ -103,7 +103,7 @@
           <h2 class="support__title">Food</h2>
         </div>
         <div class="support__btn-wrap"><span class="support__btn-sescr">There is no sitdown meal however we do have a brazilian BBQ with a selection of seasonal salads. We also have pizza for the kids. We will also be putting out some seafood and local oysters. Click on the image to read the menu (not including the seafood).       </span>
-        <span class="support__btn-sescr"><a href="/img/menu.jpg"><img src="img/menu_thumb.jpg"/></a></span>
+        <span class="support__btn-sescr"><img src="img/menu_thumb.jpg" data-mdb-img="/img/menu.jpg" /></span>
         </div>
       </div>
     </section>
@@ -151,7 +151,7 @@
         <div class="support__btn-wrap"><span class="support__btn-sescr">We honestly only want your presence as our present however corny as that sounds. This is not a traditional wedding but some folk have voiced that they would still really want to gift us something</span>
           <div class="support__btn-wrap"><span class="support__btn-sescr">1. Your presence is more than enough</span></div>
           <div class="support__btn-wrap"><span class="support__btn-sescr">2. We are plant mad and not only have a garden but also an allotment so bring us a plant - Indoor/outdoor/perenial/annual/flower/veg .... We love them all</span></div>
-          <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson">Donate to a honeymoon fund </a></span></div>
+          <div class="support__btn-wrap"><span class="support__btn-sescr">3. <a href="https://monzo.me/nicolajanewrightson" target="_blank">Donate to a honeymoon fund </a></span></div>
         </div>
       </div>
     </section>
